--- a/SubEthaEdit-Mac/English.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/English.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C62" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -872,7 +872,7 @@
                         <items>
                             <menuItem title="Find…" tag="1" keyEquivalent="f" id="269">
                                 <connections>
-                                    <action selector="performFindPanelAction:" target="463" id="601"/>
+                                    <action selector="showFindAndReplaceInterface:" target="-1" id="K1O-y8-uCu"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Find All" tag="1001" keyEquivalent="f" id="266">
@@ -1235,15 +1235,15 @@ DQ
                         <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="YLv-eZ-yXB">
-                            <rect key="frame" x="0.0" y="0.0" width="387" height="480"/>
+                            <rect key="frame" x="0.0" y="0.0" width="372" height="480"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <textView editable="NO" selectable="NO" importsGraphics="NO" richText="NO" baseWritingDirection="leftToRight" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="590">
-                                    <rect key="frame" x="0.0" y="0.0" width="387" height="1159"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="372" height="1159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="387" height="480"/>
+                                    <size key="minSize" width="372" height="480"/>
                                     <size key="maxSize" width="759" height="10000000"/>
                                     <attributedString key="textStorage">
                                         <fragment>
@@ -2066,7 +2066,7 @@ Cg
                                         </fragment>
                                     </attributedString>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="387" height="480"/>
+                                    <size key="minSize" width="372" height="480"/>
                                     <size key="maxSize" width="759" height="10000000"/>
                                 </textView>
                             </subviews>
