--- a/SubEthaEdit-Mac/SEEFindAndReplaceView.xib
+++ b/SubEthaEdit-Mac/SEEFindAndReplaceView.xib
@@ -6,23 +6,25 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEFindAndReplaceViewController">
             <connections>
+                <outlet property="feedbackTextField" destination="uFk-KV-jTR" id="Es5-HF-raS"/>
                 <outlet property="findNextButton" destination="Zld-nz-CsD" id="nmh-Sc-6gt"/>
                 <outlet property="findPreviousButton" destination="hhy-Ph-Tf4" id="fSJ-yn-7Vl"/>
                 <outlet property="findTextField" destination="b8n-nP-ifa" id="mLK-4o-90v"/>
                 <outlet property="replaceAllButton" destination="39E-pR-j5M" id="bWP-La-XLJ"/>
                 <outlet property="replaceButton" destination="Odd-5d-NOn" id="SHe-f2-LmJ"/>
                 <outlet property="replaceTextField" destination="gqM-vr-cXm" id="Fxm-SG-JCi"/>
+                <outlet property="searchOptionsButton" destination="x9b-yD-DHi" id="jYE-IL-EgN"/>
                 <outlet property="view" destination="1" id="JVf-FH-Gae"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView wantsLayer="YES" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="583" height="34"/>
+            <rect key="frame" x="0.0" y="0.0" width="583" height="51"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" misplaced="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="b8n-nP-ifa">
-                    <rect key="frame" x="34" y="7" width="146" height="22"/>
+                <textField verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="b8n-nP-ifa">
+                    <rect key="frame" x="48" y="24" width="139" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="GMg-up-LgK"/>
@@ -37,8 +39,8 @@
                         <outlet property="nextKeyView" destination="gqM-vr-cXm" id="J4O-d8-vAs"/>
                     </connections>
                 </textField>
-                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gqM-vr-cXm">
-                    <rect key="frame" x="303" y="7" width="146" height="22"/>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gqM-vr-cXm">
+                    <rect key="frame" x="310" y="24" width="139" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="MR8-tP-lEc"/>
@@ -61,8 +63,8 @@
                     </constraints>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="SmallGrowBoxRight3" id="Gt4-3V-Vpx"/>
                 </imageView>
-                <button verticalHuggingPriority="750" misplaced="YES" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="hhy-Ph-Tf4">
-                    <rect key="frame" x="188" y="8" width="28" height="19"/>
+                <button verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="hhy-Ph-Tf4">
+                    <rect key="frame" x="195" y="25" width="28" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="28" id="vOl-MX-0vS"/>
@@ -75,8 +77,8 @@
                         <action selector="findAndReplaceAction:" target="-2" id="1Xz-8w-3bf"/>
                     </connections>
                 </button>
-                <button verticalHuggingPriority="750" misplaced="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="Zld-nz-CsD">
-                    <rect key="frame" x="220" y="8" width="27" height="19"/>
+                <button verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="Zld-nz-CsD">
+                    <rect key="frame" x="227" y="25" width="27" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="roundRect" bezelStyle="roundedRect" image="NSRightFacingTriangleTemplate" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kxu-dk-QbG">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -87,7 +89,7 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" tag="6" translatesAutoresizingMaskIntoConstraints="NO" id="Odd-5d-NOn">
-                    <rect key="frame" x="455" y="8" width="59" height="19"/>
+                    <rect key="frame" x="455" y="25" width="59" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="59" id="hYv-5s-kit"/>
@@ -101,7 +103,7 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="39E-pR-j5M">
-                    <rect key="frame" x="517" y="8" width="40" height="19"/>
+                    <rect key="frame" x="517" y="25" width="40" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="hsg-Qx-N4A"/>
@@ -114,8 +116,8 @@
                         <action selector="findAndReplaceAction:" target="-2" id="l66-ef-38f"/>
                     </connections>
                 </button>
-                <button verticalHuggingPriority="750" misplaced="YES" tag="1001" translatesAutoresizingMaskIntoConstraints="NO" id="Un5-SX-sFi">
-                    <rect key="frame" x="255" y="8" width="40" height="19"/>
+                <button verticalHuggingPriority="750" tag="1001" translatesAutoresizingMaskIntoConstraints="NO" id="Un5-SX-sFi">
+                    <rect key="frame" x="262" y="25" width="40" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="TDq-im-nsI"/>
@@ -129,7 +131,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="adi-Uu-d9V">
-                    <rect key="frame" x="562" y="12" width="10" height="13"/>
+                    <rect key="frame" x="567" y="29" width="10" height="13"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="10" id="P4b-Si-2lE"/>
@@ -143,32 +145,61 @@
                         <action selector="dismissAction:" target="-2" id="zjR-CH-ijh"/>
                     </connections>
                 </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uFk-KV-jTR">
+                    <rect key="frame" x="48" y="5" width="511" height="16"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="&lt;feedback label>" id="m8A-jd-4bL">
+                        <font key="font" size="12" name="LucidaGrande"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="x9b-yD-DHi">
+                    <rect key="frame" x="4" y="7" width="40" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="1eF-kt-bA7"/>
+                        <constraint firstAttribute="height" constant="40" id="6GS-6i-DH8"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="N3d-HJ-XaV">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="searchOptionsDropdownAction:" target="-2" id="QbY-ef-vwk"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="2h9-Xo-WpS" secondAttribute="bottom" constant="4" id="2kg-vY-zfu"/>
-                <constraint firstAttribute="bottom" secondItem="b8n-nP-ifa" secondAttribute="bottom" constant="7" id="7oL-hK-hHY"/>
+                <constraint firstItem="b8n-nP-ifa" firstAttribute="leading" secondItem="x9b-yD-DHi" secondAttribute="trailing" constant="4" id="5Gs-VD-qXl"/>
                 <constraint firstItem="gqM-vr-cXm" firstAttribute="leading" secondItem="Un5-SX-sFi" secondAttribute="trailing" constant="8" id="8AM-dd-ptY"/>
                 <constraint firstItem="b8n-nP-ifa" firstAttribute="top" secondItem="1" secondAttribute="top" constant="5" id="8sT-No-hFQ"/>
+                <constraint firstItem="39E-pR-j5M" firstAttribute="trailing" secondItem="uFk-KV-jTR" secondAttribute="trailing" id="BY0-Ar-0S8"/>
                 <constraint firstItem="39E-pR-j5M" firstAttribute="height" secondItem="Odd-5d-NOn" secondAttribute="height" id="CB6-Le-GrW"/>
                 <constraint firstItem="gqM-vr-cXm" firstAttribute="height" secondItem="b8n-nP-ifa" secondAttribute="height" id="CjK-Wk-sSF"/>
                 <constraint firstItem="Zld-nz-CsD" firstAttribute="leading" secondItem="hhy-Ph-Tf4" secondAttribute="trailing" constant="4" id="Kag-1l-idI"/>
                 <constraint firstItem="39E-pR-j5M" firstAttribute="top" secondItem="Odd-5d-NOn" secondAttribute="top" id="L4o-VP-r0M"/>
                 <constraint firstItem="Zld-nz-CsD" firstAttribute="width" secondItem="hhy-Ph-Tf4" secondAttribute="width" id="OF1-N6-Tvn"/>
                 <constraint firstItem="hhy-Ph-Tf4" firstAttribute="leading" secondItem="b8n-nP-ifa" secondAttribute="trailing" constant="8" id="Q9A-Rx-tQ4"/>
+                <constraint firstItem="uFk-KV-jTR" firstAttribute="top" secondItem="b8n-nP-ifa" secondAttribute="bottom" constant="3" id="SpI-1h-9Hf"/>
                 <constraint firstAttribute="trailing" secondItem="2h9-Xo-WpS" secondAttribute="trailing" constant="4" id="UY3-H7-xbr"/>
                 <constraint firstItem="Odd-5d-NOn" firstAttribute="leading" secondItem="gqM-vr-cXm" secondAttribute="trailing" constant="6" id="WGM-sl-bVr"/>
                 <constraint firstItem="Zld-nz-CsD" firstAttribute="top" secondItem="hhy-Ph-Tf4" secondAttribute="top" id="YbH-nF-tzt"/>
                 <constraint firstItem="gqM-vr-cXm" firstAttribute="top" secondItem="b8n-nP-ifa" secondAttribute="top" id="aTj-3V-YBG"/>
                 <constraint firstItem="hhy-Ph-Tf4" firstAttribute="top" secondItem="1" secondAttribute="top" constant="7" id="cKE-lD-pci"/>
+                <constraint firstAttribute="bottom" secondItem="uFk-KV-jTR" secondAttribute="bottom" constant="5" id="chS-YX-OFs"/>
                 <constraint firstItem="adi-Uu-d9V" firstAttribute="centerY" secondItem="39E-pR-j5M" secondAttribute="centerY" constant="-0.5" id="kZF-9t-Ukw"/>
-                <constraint firstAttribute="trailing" secondItem="adi-Uu-d9V" secondAttribute="trailing" constant="11" id="rnS-Xe-gcm"/>
+                <constraint firstItem="x9b-yD-DHi" firstAttribute="top" secondItem="1" secondAttribute="top" constant="4" id="nbE-16-SI7"/>
+                <constraint firstAttribute="trailing" secondItem="adi-Uu-d9V" secondAttribute="trailing" constant="6" id="rnS-Xe-gcm"/>
                 <constraint firstItem="39E-pR-j5M" firstAttribute="leading" secondItem="Odd-5d-NOn" secondAttribute="trailing" constant="3" id="rnz-or-Cpg"/>
+                <constraint firstItem="x9b-yD-DHi" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="4" id="t8p-TT-fKz"/>
                 <constraint firstItem="gqM-vr-cXm" firstAttribute="width" secondItem="b8n-nP-ifa" secondAttribute="width" id="uwX-Eg-c8V"/>
-                <constraint firstItem="adi-Uu-d9V" firstAttribute="leading" secondItem="39E-pR-j5M" secondAttribute="trailing" constant="5" id="vfb-ba-yhe"/>
+                <constraint firstItem="adi-Uu-d9V" firstAttribute="leading" secondItem="39E-pR-j5M" secondAttribute="trailing" constant="10" id="vfb-ba-yhe"/>
                 <constraint firstItem="Un5-SX-sFi" firstAttribute="leading" secondItem="Zld-nz-CsD" secondAttribute="trailing" constant="8" id="vfg-ej-WZI"/>
                 <constraint firstItem="Zld-nz-CsD" firstAttribute="centerY" secondItem="Un5-SX-sFi" secondAttribute="centerY" id="wbr-ws-9tf"/>
                 <constraint firstItem="Zld-nz-CsD" firstAttribute="top" secondItem="Odd-5d-NOn" secondAttribute="top" id="xJH-3W-4ee"/>
-                <constraint firstItem="b8n-nP-ifa" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="34" id="xJY-AN-Aec"/>
+                <constraint firstItem="uFk-KV-jTR" firstAttribute="leading" secondItem="b8n-nP-ifa" secondAttribute="leading" constant="2" id="xha-2g-kA7"/>
             </constraints>
             <backgroundFilters>
                 <ciFilter name="CIGaussianBlur">
@@ -187,6 +218,15 @@
                 </ciFilter>
             </backgroundFilters>
         </customView>
+        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="5rs-hV-PWK">
+            <rect key="frame" x="0.0" y="0.0" width="38" height="17"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="3uf-lm-uf3">
+                <font key="font" metaFont="system"/>
+                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+            </textFieldCell>
+        </textField>
     </objects>
     <resources>
         <image name="EditorRemoveSplit" width="10" height="12"/>
